# event-driven-data-processing

./: Dockerfile  README.md  ec2_init.py  pyproject.toml
.circleci/: aws_resources.yml  config.yml
app/: connect_prefect.py  data_processing_flow.py  example_flow.py
flows/: example_flow.py
local_tests/: get_flow_id.py
manage_infra/: connect_prefect.py  k8_prefect_agent_install.py  shutdown_eks.py  start_nr_eks.py
sandbox/: get_flow_id.py  trigger_flow.py
