[tool.poetry]
name = "event-processing"
version = "0.1.0"
description = "process .csv files added to S3 via AWS lambda, prefect, and AWA EKS"
authors = ["lab3000 <lbawa1@galvanizeu.newhaven.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
awscli = "^1.19.69"
prefect = {extras = ["aws", "viz"], version = "^0.14.17"}
boto3 = "^1.17.84"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
